Format purity and completeness fraction plots

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -183,7 +183,7 @@
     "def get_completeness(c, bin_var, n_bins):\n",
     "    return get_purity_or_completeness(c, bin_var, n_bins)\n",
     "\n",
-    "def get_purity_or_completeness_fraction(p_or_c, metric):\n",
+    "def get_purity_or_completeness_fraction(p_or_c, metric, plot_format):\n",
     "    bins = np.linspace(0, 1, 21)\n",
     "    weights = np.ones_like(p_or_c) / len(p_or_c)\n",
     "    h, _ = np.histogram(p_or_c, bins=bins)\n",
@@ -196,25 +196,30 @@
     "    x = x[idx]\n",
     "    e = e[idx]\n",
     "    \n",
-    "    plt.figure(figsize=(20, 15))\n",
+    "    plt.rcParams[\"figure.figsize\"] = (20, 15)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    \n",
+    "    ax.set_title(plot_format.title, fontsize=plot_format.titlesize)\n",
+    "    ax.tick_params(axis='x', labelsize=plot_format.labelsize)\n",
+    "    ax.tick_params(axis='y', labelsize=plot_format.labelsize)\n",
+    "    ax.set_xlabel(plot_format.xlabel, fontsize=plot_format.titlesize)\n",
+    "    ax.set_ylabel(plot_format.ylabel, fontsize=plot_format.titlesize)\n",
+    "    if not plot_format.xlim is None:\n",
+    "        plt.xlim(plot_format.xlim[0], plot_format.xlim[1])\n",
+    "    if not plot_format.ylim is None:\n",
+    "        plt.ylim(plot_format.ylim[0], plot_format.ylim[1])\n",
+    "        \n",
     "    plt.errorbar(x, y, xerr=0.05 / 2, yerr = e, fmt='o', markersize = '2', color='r', elinewidth=0.5)\n",
     "    \n",
-    "    plt.xlabel(metric.lower())\n",
-    "    plt.ylabel(\"fraction\")\n",
-    "    plt.title(metric.title())\n",
-    "    plt.xlim(0,1.01)\n",
-    "    plt.ylim(0,1.01)\n",
-    "    plt.rcParams[\"figure.figsize\"] = (13,8)\n",
     "    plt.show()\n",
     "\n",
-    "def get_purity_fraction(purity):\n",
-    "    get_purity_or_completeness_fraction(purity, \"purity\")\n",
+    "def get_purity_fraction(purity, plot_format):\n",
+    "    get_purity_or_completeness_fraction(purity, \"purity\", plot_format)\n",
     "    \n",
-    "def get_completeness_fraction(completeness):\n",
-    "    get_purity_or_completeness_fraction(completeness, \"completeness\")\n",
+    "def get_completeness_fraction(completeness, plot_format):\n",
+    "    get_purity_or_completeness_fraction(completeness, \"completeness\", plot_format)\n",
     "    \n",
     "def plot_metric(x, y, err, plot_format, metric=\"completeness\"):\n",
-    "    plt.figure()\n",
     "    plt.rcParams[\"figure.figsize\"] = (20, 15)\n",
     "    fig, ax = plt.subplots()\n",
     "    \n",
@@ -324,10 +329,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_format = PlotFormat(title=\"\", xlabel=\"purity\", ylabel=\"fraction\", xlim=None, ylim=None, titlesize=24, labelsize=18,\n",
-    "                         is_logx=False, is_semilogx=False, is_logy=False, is_semilogy=False)\n",
-    "get_purity_fraction(purity_unique_array)\n",
-    "get_completeness_fraction(completeness_unique_array)"
+    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"purity\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
+    "get_purity_fraction(purity_unique_array, plot_format)\n",
+    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"completeness\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
+    "get_completeness_fraction(completeness_unique_array, plot_format)"
    ]
   },
   {
