Improve plotting scale

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -40,6 +40,14 @@
    "source": [
     "import uproot, numpy as np\n",
     "\n",
+    "def make_semilog_binning(low, high):\n",
+    "    space = []\n",
+    "    for i in range(int(np.floor(np.log10(low))), int(np.ceil(np.log10(high)))):\n",
+    "        this_space = np.linspace(10**i, 10**(i + 1), 10)\n",
+    "        space.append(this_space[1:] if space else this_space)\n",
+    "    space = np.concatenate(space)\n",
+    "    return space\n",
+    "\n",
     "class MCValidation:\n",
     "    def __init__(self, filename, treename):\n",
     "        file = uproot.open(filename)\n",
@@ -103,21 +111,15 @@
     "        self.is_semilogy = is_semilogy\n",
     "\n",
     "class Metric:\n",
-    "    def __init__(self, bin_var, n_bins):\n",
-    "        self.low = 0\n",
-    "        self.high = np.max(bin_var)\n",
-    "        self.n_bins = n_bins\n",
-    "        self.x = np.linspace(self.low, self.high, self.n_bins + 1)\n",
+    "    def __init__(self, bin_var, bins):\n",
+    "        self.low = bins[0]\n",
+    "        self.high = bins[-1]\n",
+    "        self.bins = bins\n",
+    "        self.n_bins = len(bins) - 1\n",
+    "        self.x = bins\n",
     "        self.y = np.zeros_like(self.x)\n",
     "        self.y_err_low = np.zeros_like(self.y)\n",
     "        self.y_err_high = np.zeros_like(self.y)\n",
-    "        self.y_errs = np.array(list(zip(self.y_err_low, self.y_err_high))).T\n",
-    "        \n",
-    "    def rebin(self, bin_width):\n",
-    "        self.y = self.y[::bin_width]\n",
-    "        self.x = self.x[::bin_width]\n",
-    "        self.y_err_low = self.y_err_low[::bin_width]\n",
-    "        self.y_err_high = self.y_err_high[::bin_width]\n",
     "        self.y_errs = np.array(list(zip(self.y_err_low, self.y_err_high))).T\n",
     "    \n",
     "    def suppress_empty(self, empty_val=-1):\n",
@@ -135,15 +137,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_efficiency(efficiency, bin_var, n_bins):\n",
-    "    metric = Metric(bin_var, n_bins)\n",
+    "def get_efficiency(efficiency, bin_var, bins):\n",
+    "    metric = Metric(bin_var, bins)\n",
     "    \n",
-    "    bins = np.linspace(metric.low, metric.high, n_bins + 1)\n",
-    "    for i in range(n_bins):\n",
-    "        if i > (n_bins - 1):\n",
-    "            idx = np.where((bin_var >= bins[i]) & (bin_var < (bins[i + 1])))\n",
+    "    for i in range(metric.n_bins):\n",
+    "        if i > (metric.n_bins - 1):\n",
+    "            idx = np.where((bin_var >= metric.bins[i]) & (bin_var < (metric.bins[i + 1])))\n",
     "        else:\n",
-    "            idx = np.where((bin_var >= bins[i]) & (bin_var <= (bins[i + 1])))\n",
+    "            idx = np.where((bin_var >= metric.bins[i]) & (bin_var <= (metric.bins[i + 1])))\n",
     "        if len(idx[0]) > 0:\n",
     "            selection = efficiency[idx]\n",
     "            metric.y[i] = np.mean(selection)\n",
@@ -156,19 +157,18 @@
     "    \n",
     "    return metric\n",
     "\n",
-    "def get_purity_or_completeness(p_or_c, bin_var, n_bins):\n",
-    "    metric = Metric(bin_var, n_bins)\n",
+    "def get_purity_or_completeness(p_or_c, bin_var, bins):\n",
+    "    metric = Metric(bin_var, bins)\n",
     "    \n",
-    "    bins = np.linspace(metric.low, metric.high, n_bins + 1)\n",
-    "    for i in range(n_bins):\n",
-    "        if i > (n_bins - 1):\n",
-    "            idx = np.where((bin_var >= bins[i]) & (bin_var < (bins[i + 1])))\n",
+    "    for i in range(metric.n_bins):\n",
+    "        if i > (metric.n_bins - 1):\n",
+    "            idx = np.where((bin_var >= metric.bins[i]) & (bin_var < (metric.bins[i + 1])))\n",
     "        else:\n",
-    "            idx = np.where((bin_var >= bins[i]) & (bin_var <= (bins[i + 1])))\n",
+    "            idx = np.where((bin_var >= metric.bins[i]) & (bin_var <= (metric.bins[i + 1])))\n",
     "        if len(idx[0]) > 0:\n",
     "            selection = p_or_c[idx]\n",
     "            metric.y[i] = np.median(selection)\n",
-    "            metric.y_err_low[i], metric.y_err_high[i] = np.quantile(selection, [0.1, 0.9])\n",
+    "            metric.y_err_low[i], metric.y_err_high[i] = np.quantile(selection, [0.5 - 0.34135, 0.5 + 0.34135])\n",
     "        else:\n",
     "            metric.y[i] = -1\n",
     "\n",
@@ -177,11 +177,11 @@
     "    \n",
     "    return metric\n",
     "\n",
-    "def get_purity(p, bin_var, n_bins):\n",
-    "    return get_purity_or_completeness(p, bin_var, n_bins)\n",
+    "def get_purity(p, bin_var, bins):\n",
+    "    return get_purity_or_completeness(p, bin_var, bins)\n",
     "\n",
-    "def get_completeness(c, bin_var, n_bins):\n",
-    "    return get_purity_or_completeness(c, bin_var, n_bins)\n",
+    "def get_completeness(c, bin_var, bins):\n",
+    "    return get_purity_or_completeness(c, bin_var, bins)\n",
     "\n",
     "def get_purity_or_completeness_fraction(p_or_c, metric, plot_format):\n",
     "    bins = np.linspace(0, 1, 21)\n",
@@ -242,9 +242,9 @@
     "        plt.ylim(plot_format.ylim[0], plot_format.ylim[1])\n",
     "    \n",
     "    if metric.lower() in ['purity', 'completeness']:\n",
-    "        plt.plot(x, y, color='r', label = \"median\")\n",
-    "        plt.plot(x, err[0], color='g', label = \"90th\")\n",
-    "        plt.plot(x, err[1], color='b', label = \"10th\")\n",
+    "        plt.plot(x, y, color='b', label = \"median\")\n",
+    "        plt.plot(x, err[0], color='r', linestyle='dashed', label = \"84.1%\")\n",
+    "        plt.plot(x, err[1], color='r', linestyle='dashed', label = \"15.9%\")\n",
     "        plt.legend(fontsize=plot_format.titlesize)\n",
     "    elif metric.lower() == 'efficiency':\n",
     "        bin_width = (x[1] - x[0])\n",
@@ -343,15 +343,15 @@
    },
    "outputs": [],
    "source": [
-    "n_bins = 3000\n",
-    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"num true hits\", ylabel=\"completeness\", xlim=(1, 12000), ylim=(0, 1.01),\n",
+    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"num true hits\", ylabel=\"completeness\", xlim=(1, 20000), ylim=(0, 1.01),\n",
     "                         is_semilogx=True)\n",
-    "metric = get_completeness(completeness_unique_array, mc_nhits, n_bins)\n",
+    "metric = get_completeness(completeness_unique_array, mc_nhits, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
     "\n",
-    "n_bins = 60\n",
+    "bins = np.linspace(0, 30, 61)\n",
     "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"true momentum (GeV)\", ylabel=\"completeness\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_completeness(completeness_unique_array, mc_mom, n_bins)\n",
+    "metric = get_completeness(completeness_unique_array, mc_mom, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")"
    ]
   },
@@ -361,15 +361,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_bins = 3000\n",
-    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"num true hits\", ylabel=\"purity\", xlim=(1, 12000), ylim=(0, 1.01),\n",
+    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"num true hits\", ylabel=\"purity\", xlim=(1, 20000), ylim=(0, 1.01),\n",
     "                         is_semilogx=True)\n",
-    "metric = get_purity(completeness_unique_array, mc_nhits, n_bins)\n",
+    "metric = get_purity(purity_unique_array, mc_nhits, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
     "\n",
-    "n_bins = 60\n",
+    "bins = np.linspace(0, 30, 61)\n",
     "plot_format = PlotFormat(title=\"Purity\", xlabel=\"true momentum (GeV)\", ylabel=\"purity\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_purity(completeness_unique_array, mc_mom, n_bins)\n",
+    "metric = get_purity(purity_unique_array, mc_mom, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")"
    ]
   },
@@ -388,15 +388,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_bins = 1000\n",
-    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"num true hits\", ylabel=\"purity\", xlim=(1, 12000), ylim=(0, 1.01),\n",
+    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"num true hits\", ylabel=\"efficiency\", xlim=(1, 12000), ylim=(0, 1.01),\n",
     "                         is_semilogx=True)\n",
-    "metric = get_efficiency(completeness_unique_array, mc_nhits, n_bins)\n",
+    "metric = get_efficiency(efficiency_unique_array, mc_nhits, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")\n",
     "\n",
-    "n_bins = 60\n",
-    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"true momentum (GeV)\", ylabel=\"purity\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_efficiency(completeness_unique_array, mc_mom, n_bins)\n",
+    "bins = np.linspace(0, 30, 61)\n",
+    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"true momentum (GeV)\", ylabel=\"efficiency\", xlim=(0, 30), ylim=(0, 1.01))\n",
+    "metric = get_efficiency(efficiency_unique_array, mc_mom, bins)\n",
     "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
    ]
   },
