refactor and add interaction type plots

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -89,6 +89,18 @@
     "        self.completeness_adc_list_u = tree[\"completenessAdcVectorU\"].array(library=\"np\")\n",
     "        self.completeness_adc_list_v = tree[\"completenessAdcVectorV\"].array(library=\"np\")\n",
     "        self.completeness_adc_list_w = tree[\"completenessAdcVectorW\"].array(library=\"np\")\n",
+    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")\n",
+    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")\n",
+    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")\n",
+    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")\n",
+    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")\n",
+    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")\n",
+    "        # Typo in first set, this will be fixed in the future\n",
+    "        self.is_nue = tree[\"isNueE\"].array(library=\"np\")\n",
+    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")\n",
+    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\") + tree[\"nPiPlus\"].array(library=\"np\")\n",
+    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")\n",
+    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")\n",
     "        self.pc_metric = self.purity_adc_list * self.completeness_adc_list\n",
     "        file.close()\n",
     "        make_sequential(self)\n",
@@ -278,6 +290,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metric_arrays(validation, idx):\n",
+    "    completeness = validation.completeness_list[idx]\n",
+    "    purity = validation.purity_list[idx]\n",
+    "\n",
+    "    index_array = [ np.argmax(val) if len(val) > 0 else -1 for val in completeness ] \n",
+    "    completeness_array = np.array([ np.max(val) if len(val) > 0 else 0 for val in completeness ])\n",
+    "    purity_array = np.array([ purity[i][index_array[i]] if index_array[i] != -1 else 0 for i in range(len(purity)) ])\n",
+    "    \n",
+    "    efficiency_array = np.array((completeness_array >= 0.5) & (purity_array >= 0.5))\n",
+    "\n",
+    "    return purity_array, completeness_array, efficiency_array\n",
+    "\n",
+    "def make_completeness_plots(completeness_array, mc_nhits, mc_mom):\n",
+    "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"num true hits\", ylabel=\"completeness\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    metric = get_completeness(completeness_array, mc_nhits, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
+    "\n",
+    "    bins = np.linspace(0, 30, 61)\n",
+    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"true momentum (GeV)\", ylabel=\"completeness\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    metric = get_completeness(completeness_array, mc_mom, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
+    "\n",
+    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"completeness\", ylabel=\"fraction\",\n",
+    "                             xlim=(0, 1), ylim=(0, 1.01))\n",
+    "    get_completeness_fraction(completeness_array, plot_format)\n",
+    "\n",
+    "def make_purity_plots(purity_array, mc_nhits, mc_mom):\n",
+    "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"num true hits\", ylabel=\"purity\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    metric = get_purity(purity_array, mc_nhits, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
+    "\n",
+    "    bins = np.linspace(0, 30, 61)\n",
+    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"true momentum (GeV)\", ylabel=\"purity\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    metric = get_purity(purity_array, mc_mom, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
+    "\n",
+    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"purity\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
+    "    get_purity_fraction(purity_array, plot_format)\n",
+    "\n",
+    "def make_efficiency_plots(efficiency_array, mc_nhits, mc_mom):\n",
+    "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
+    "    plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"num true hits\", ylabel=\"efficiency\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    metric = get_efficiency(efficiency_array, mc_nhits, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")\n",
+    "\n",
+    "    bins = np.linspace(0, 30, 61)\n",
+    "    plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"true momentum (GeV)\", ylabel=\"efficiency\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    metric = get_efficiency(efficiency_array, mc_mom, bins)\n",
+    "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,65 +371,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pdg = 11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = np.where(abs(validation.mc_pdg) == pdg)\n",
-    "# temp to test\n",
-    "#idx = np.where((abs(validation.mc_pdg) == pdg) & ((validation.mc_nhits >= 14) & (validation.mc_nhits <= 15)))\n",
-    "\n",
-    "completeness = validation.completeness_list[idx]\n",
-    "purity = validation.purity_list[idx]\n",
-    "mc_nhits = validation.mc_nhits[idx]\n",
-    "n_matches = validation.n_matches[idx]\n",
-    "mc_mom = validation.mc_momentum[idx]\n",
-    "\n",
-    "index_array = [ np.argmax(val) if len(val) > 0 else -1 for val in completeness ] \n",
-    "completeness_unique_array = np.array([ np.max(val) if len(val) > 0 else 0 for val in completeness ])\n",
-    "purity_unique_array = np.array([ purity[i][index_array[i]] if index_array[i] != -1 else 0 for i in range(len(purity)) ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"purity\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
-    "get_purity_fraction(purity_unique_array, plot_format)\n",
-    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"completeness\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
-    "get_completeness_fraction(completeness_unique_array, plot_format)"
+    "# Inclusive particle metrics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"num true hits\", ylabel=\"completeness\", xlim=(1, 20000), ylim=(0, 1.01),\n",
-    "                         is_semilogx=True)\n",
-    "metric = get_completeness(completeness_unique_array, mc_nhits, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
-    "\n",
-    "bins = np.linspace(0, 30, 61)\n",
-    "plot_format = PlotFormat(title=\"Completeness\", xlabel=\"true momentum (GeV)\", ylabel=\"completeness\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_completeness(completeness_unique_array, mc_mom, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")"
+    "for pdg in [11, 13, 22, 211, 2212]:\n",
+    "    idx = np.where(abs(validation.mc_pdg) == pdg)\n",
+    "    mc_nhits = validation.mc_nhits[idx]\n",
+    "    mc_mom = validation.mc_momentum[idx]\n",
+    "    completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
+    "    make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
+    "    make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
+    "    make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Particle metrics by interaction type (CC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
+    "    elif int_type == \"res\": type_target = validation.is_res == True\n",
+    "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
+    "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
+    "    type_match = type_target & (validation.is_cc == True)\n",
+    "    for pdg in [11, 13, 22, 211, 2212]:\n",
+    "        pdg_match = abs(validation.mc_pdg) == pdg\n",
+    "        idx = np.where(pdg_match & type_match)\n",
+    "        if len(idx[0]) > 0:\n",
+    "            mc_nhits = validation.mc_nhits[idx]\n",
+    "            mc_mom = validation.mc_momentum[idx]\n",
+    "            completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
+    "            make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
+    "            make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
+    "            make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Particle metrics by interaction type (NC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
+    "    elif int_type == \"res\": type_target = validation.is_res == True\n",
+    "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
+    "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
+    "    type_match = type_target & (validation.is_cc == False)\n",
+    "    for pdg in [11, 13, 22, 211, 2212]:\n",
+    "        pdg_match = abs(validation.mc_pdg) == pdg\n",
+    "        idx = np.where(pdg_match & type_match)\n",
+    "        if len(idx[0]) > 0:\n",
+    "            mc_nhits = validation.mc_nhits[idx]\n",
+    "            mc_mom = validation.mc_momentum[idx]\n",
+    "            completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
+    "            make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
+    "            make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
+    "            make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
    ]
   },
   {
@@ -361,43 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"num true hits\", ylabel=\"purity\", xlim=(1, 20000), ylim=(0, 1.01),\n",
-    "                         is_semilogx=True)\n",
-    "metric = get_purity(purity_unique_array, mc_nhits, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
-    "\n",
-    "bins = np.linspace(0, 30, 61)\n",
-    "plot_format = PlotFormat(title=\"Purity\", xlabel=\"true momentum (GeV)\", ylabel=\"purity\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_purity(purity_unique_array, mc_mom, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "efficiency_unique_array = np.array((completeness_unique_array >= 0.5) & (purity_unique_array >= 0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"num true hits\", ylabel=\"efficiency\", xlim=(1, 12000), ylim=(0, 1.01),\n",
-    "                         is_semilogx=True)\n",
-    "metric = get_efficiency(efficiency_unique_array, mc_nhits, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")\n",
-    "\n",
-    "bins = np.linspace(0, 30, 61)\n",
-    "plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"true momentum (GeV)\", ylabel=\"efficiency\", xlim=(0, 30), ylim=(0, 1.01))\n",
-    "metric = get_efficiency(efficiency_unique_array, mc_mom, bins)\n",
-    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
+    "# TODO: Needs suitable labels for pdg and type"
    ]
   },
   {
