--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "class PlotFormat:\n",
     "    def __init__(self, title=\"\", xlabel=\"x\", ylabel=\"y\", xlim=None, ylim=None, titlesize=24, labelsize=18, is_logx=False,\n",
-    "                is_semilogx=False, is_logy=False, is_semilogy=False):\n",
+    "                is_semilogx=False, is_logy=False, is_semilogy=False, filename=\"placeholder\"):\n",
     "        self.title = title\n",
     "        self.xlabel = xlabel\n",
     "        self.ylabel = ylabel\n",
@@ -121,6 +121,7 @@
     "        self.is_logy = is_logy\n",
     "        self.is_semilogx = is_semilogx\n",
     "        self.is_semilogy = is_semilogy\n",
+    "        self.filename = filename\n",
     "\n",
     "class Metric:\n",
     "    def __init__(self, bin_var, bins):\n",
@@ -223,6 +224,9 @@
     "        \n",
     "    plt.errorbar(x, y, xerr=0.05 / 2, yerr = e, fmt='o', markersize = '2', color='r', elinewidth=0.5)\n",
     "    \n",
+    "    plt.tight_layout()\n",
+    "    save_plot(fig, plot_format.filename)\n",
+    "    \n",
     "    plt.show()\n",
     "\n",
     "def get_purity_fraction(purity, plot_format):\n",
@@ -261,7 +265,10 @@
     "    elif metric.lower() == 'efficiency':\n",
     "        bin_width = (x[1] - x[0])\n",
     "        plt.errorbar(x, y, xerr=bin_width / 2, yerr = err, fmt='o', markersize = '2', color='r', elinewidth=0.5)\n",
-    "\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    save_plot(fig, plot_format.filename)\n",
+    "    \n",
     "    plt.show()"
    ]
   },
@@ -286,7 +293,7 @@
     "            os.mkdir(f'images/{img_type}')\n",
     "        if not os.path.exists(f'images/{img_type}/{subdir}'):\n",
     "            os.mkdir(f'images/{img_type}/{subdir}')\n",
-    "        fig.savefig(f'images/{img_type}/{subdir}/{filename}.{img_type}', dpi=200)"
+    "        fig.savefig(f'images/{img_type}/{subdir}/{filename}.{img_type}', dpi=200, facecolor='w')"
    ]
   },
   {
@@ -307,49 +314,50 @@
     "\n",
     "    return purity_array, completeness_array, efficiency_array\n",
     "\n",
-    "def make_completeness_plots(completeness_array, mc_nhits, mc_mom):\n",
+    "def make_completeness_plots(pdg, completeness_array, mc_nhits, mc_mom, filename):\n",
     "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"num true hits\", ylabel=\"completeness\",\n",
-    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"num true hits\", ylabel=\"completeness\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True, filename=f\"{filename}_nhits\")\n",
     "    metric = get_completeness(completeness_array, mc_nhits, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
     "\n",
     "    bins = np.linspace(0, 30, 61)\n",
-    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"true momentum (GeV)\", ylabel=\"completeness\",\n",
-    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"true momentum (GeV)\", ylabel=\"completeness\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01), filename=f\"{filename}_mom\")\n",
     "    metric = get_completeness(completeness_array, mc_mom, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"completeness\")\n",
     "\n",
-    "    plot_format = PlotFormat(title=\"Completeness\", xlabel=\"completeness\", ylabel=\"fraction\",\n",
-    "                             xlim=(0, 1), ylim=(0, 1.01))\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"completeness\", ylabel=\"fraction\",\n",
+    "                             xlim=(0, 1), ylim=(0, 1.01), filename=f\"{filename}_frac\")\n",
     "    get_completeness_fraction(completeness_array, plot_format)\n",
     "\n",
-    "def make_purity_plots(purity_array, mc_nhits, mc_mom):\n",
+    "def make_purity_plots(pdg, purity_array, mc_nhits, mc_mom, filename):\n",
     "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"num true hits\", ylabel=\"purity\",\n",
-    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"num true hits\", ylabel=\"purity\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True, filename=f\"{filename}_nhits\")\n",
     "    metric = get_purity(purity_array, mc_nhits, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
     "\n",
     "    bins = np.linspace(0, 30, 61)\n",
-    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"true momentum (GeV)\", ylabel=\"purity\",\n",
-    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"true momentum (GeV)\", ylabel=\"purity\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01), filename=f\"{filename}_mom\")\n",
     "    metric = get_purity(purity_array, mc_mom, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"purity\")\n",
     "\n",
-    "    plot_format = PlotFormat(title=\"Purity\", xlabel=\"purity\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01))\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"purity\", ylabel=\"fraction\", xlim=(0, 1), ylim=(0, 1.01),\n",
+    "                             filename=f\"{filename}_frac\")\n",
     "    get_purity_fraction(purity_array, plot_format)\n",
     "\n",
-    "def make_efficiency_plots(efficiency_array, mc_nhits, mc_mom):\n",
+    "def make_efficiency_plots(pdg, efficiency_array, mc_nhits, mc_mom, filename):\n",
     "    bins = make_semilog_binning(np.min(mc_nhits), np.max(mc_nhits))\n",
-    "    plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"num true hits\", ylabel=\"efficiency\",\n",
-    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True)\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"num true hits\", ylabel=\"efficiency\",\n",
+    "                             xlim=(1, np.max(mc_nhits)), ylim=(0, 1.01), is_semilogx=True, filename=f\"{filename}_nhits\")\n",
     "    metric = get_efficiency(efficiency_array, mc_nhits, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")\n",
     "\n",
     "    bins = np.linspace(0, 30, 61)\n",
-    "    plot_format = PlotFormat(title=\"Efficiency\", xlabel=\"true momentum (GeV)\", ylabel=\"efficiency\",\n",
-    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01))\n",
+    "    plot_format = PlotFormat(title=pdg_to_id[pdg], xlabel=\"true momentum (GeV)\", ylabel=\"efficiency\",\n",
+    "                             xlim=(0, min(30, np.max(mc_mom))), ylim=(0, 1.01), filename=f\"{filename}_mom\")\n",
     "    metric = get_efficiency(efficiency_array, mc_mom, bins)\n",
     "    plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
    ]
@@ -371,6 +379,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdg_to_id = {11: r\"$e$\", 13: r\"$\\mu$\", 22: r\"$\\gamma$\", 211: r\"$\\pi$\", 2212: r\"$p$\"}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,14 +402,14 @@
    },
    "outputs": [],
    "source": [
-    "for pdg in [11, 13, 22, 211, 2212]:\n",
+    "for pdg in pdg_to_id:\n",
     "    idx = np.where(abs(validation.mc_pdg) == pdg)\n",
     "    mc_nhits = validation.mc_nhits[idx]\n",
     "    mc_mom = validation.mc_momentum[idx]\n",
     "    completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
-    "    make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
-    "    make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
-    "    make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
+    "    make_completeness_plots(pdg, completeness_array, mc_nhits, mc_mom, f\"inc_completeness_{pdg}\")\n",
+    "    make_purity_plots(pdg, purity_array, mc_nhits, mc_mom, f\"inc_purity_{pdg}\")\n",
+    "    make_efficiency_plots(pdg, efficiency_array, mc_nhits, mc_mom, f\"inc_efficiency_{pdg}\")"
    ]
   },
   {
@@ -416,16 +433,16 @@
     "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
     "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
     "    type_match = type_target & (validation.is_cc == True)\n",
-    "    for pdg in [11, 13, 22, 211, 2212]:\n",
+    "    for pdg in pdg_to_id:\n",
     "        pdg_match = abs(validation.mc_pdg) == pdg\n",
     "        idx = np.where(pdg_match & type_match)\n",
     "        if len(idx[0]) > 0:\n",
     "            mc_nhits = validation.mc_nhits[idx]\n",
     "            mc_mom = validation.mc_momentum[idx]\n",
     "            completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
-    "            make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
-    "            make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
-    "            make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
+    "            make_completeness_plots(pdg, completeness_array, mc_nhits, mc_mom, f\"cc{int_type}_completeness_{pdg}\")\n",
+    "            make_purity_plots(pdg, purity_array, mc_nhits, mc_mom, f\"cc{int_type}_purity_{pdg}\")\n",
+    "            make_efficiency_plots(pdg, efficiency_array, mc_nhits, mc_mom, f\"cc{int_type}_efficiency_{pdg}\")"
    ]
   },
   {
@@ -449,25 +466,16 @@
     "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
     "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
     "    type_match = type_target & (validation.is_cc == False)\n",
-    "    for pdg in [11, 13, 22, 211, 2212]:\n",
+    "    for pdg in pdg_to_id:\n",
     "        pdg_match = abs(validation.mc_pdg) == pdg\n",
     "        idx = np.where(pdg_match & type_match)\n",
     "        if len(idx[0]) > 0:\n",
     "            mc_nhits = validation.mc_nhits[idx]\n",
     "            mc_mom = validation.mc_momentum[idx]\n",
     "            completeness_array, purity_array, efficiency_array = get_metric_arrays(validation, idx)\n",
-    "            make_completeness_plots(completeness_array, mc_nhits, mc_mom)\n",
-    "            make_purity_plots(purity_array, mc_nhits, mc_mom)\n",
-    "            make_efficiency_plots(efficiency_array, mc_nhits, mc_mom)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Needs suitable labels for pdg and type"
+    "            make_completeness_plots(pdg, completeness_array, mc_nhits, mc_mom, f\"nc{int_type}_completeness_{pdg}\")\n",
+    "            make_purity_plots(pdg, purity_array, mc_nhits, mc_mom, f\"nc{int_type}_purity_{pdg}\")\n",
+    "            make_efficiency_plots(pdg, efficiency_array, mc_nhits, mc_mom, f\"nc{int_type}_efficiency_{pdg}\")"
    ]
   },
   {
